@@ -1,3 +1,7 @@
+2010-05-30 Homer Xing <homer.xing@gmail.com>
+
+    * Add a preference menuitem to choose default pane.
+
 2010-05-29 Homer Xing <homer.xing@gmail.com>
 
     * Move OpenJDK to native_apps
@@ -8,7 +12,7 @@
 
 2010-05-28 Homer Xing <homer.xing@gmail.com>
 
-    * Support YLMF. For YLMF users, please upgrade to version 10.05.92
+    * Support YLMF. YLMF users please upgrade to version 10.05.92
 
 2010-05-23 Devil Wang <wxjeacen@gmail.com>
 
